# eleos

./: .gitignore  Makefile  README.md  brainstorm.md  feedback-overrides.md  pyproject.toml  reference-architecture-spec.md
alembic/: env.py
alembic/versions/: 20260228_0001_initial_schema.py
docs/: implementation-and-usage.md  supabase-eleos-test-recommendations.md  supabase-test-cases.md
docs/research/: observability-options.md  output-contract-options.md  repo-tracking.md
docs/research/deep-dives/: TEMPLATE.md  cross-repo-comparison.md  facebookresearch_hyperagents.md  humanlayer_agentcontrolplane.md  ibm_mcp-context-forge.md  langchain-ai_langgraph.md  microsoft_autogen.md  openai_codex.md  py-why_pywhyllm.md  statelyai_agent.md
docs/research/next-steps/: playbook-mining.md
docs/spec/: requirements.md  spec-creation-guide.md
scripts/: generate_openapi.py
scripts/e2e/: run_supabase_e2e.py
src/eleos/api/: app.py  data.py  models.py
src/eleos/cli/: app.py
src/eleos/core/: cognition.py  context_transfer.py  critic.py  evidence_ledger.py  executor.py  planner.py  reporter.py  runtime.py  termination.py  tool_catalog.py  tool_inputs.py  tools.py
src/eleos/db/: engine.py  models.py  playbooks.py  state_cases.py  state_cognition.py  state_evidence.py  state_hypotheses.py  state_reports.py  state_support.py  state_tasks.py  (+2 more)
test_env/supabase/: Dockerfile.eleos  README.md  docker-compose.eleos.yml  docker-compose.yml
web/: package-lock.json  package.json  vite.config.ts
web/openapi/: eleos-openapi.json
web/src/: App.tsx  index.css  main.tsx
(+80 files in other folders)
