[project]
name = "eleos"
version = "0.1.0"
description = "Evidence-Led Execution for Operational Support (ELEOS)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "structlog>=25.4.0",
  "typer>=0.16.0",
  "rich>=14.1.0",
  "tenacity>=9.1.0",
  "psycopg[binary]>=3.2.10",
  "sqlalchemy>=2.0.43",
  "alembic>=1.16.5",
  "langgraph>=1.0.9",
  "pydantic-ai>=1.63.0",
  "jinja2>=3.1.6",
  "httpx>=0.28.1",
]

[project.scripts]
eleos = "eleos.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.4.0",
  "ruff>=0.13.0",
  "ty>=0.0.1a10"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
